Post2Activity-댓글기능 추가

--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -8,18 +8,21 @@
     tools:context=".fragment.PostListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/main_recyclerview"
+        android:id="@+id/post_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/main_post_edit"
+        android:id="@+id/post_post_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#FFA7A7"
         android:src="@drawable/ic_edit" />
 
