--- a/app/src/main/res/layout/fragment_my_list.xml
+++ b/app/src/main/res/layout/fragment_my_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.PostListFragment">
+    tools:context=".fragment.MyListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_recyclerview"
