오류 수정 post 댓글

--- a/app/src/main/res/drawable/card_edit.xml
+++ b/app/src/main/res/drawable/card_edit.xml
@@ -7,8 +7,8 @@
         android:bottom="2dp">
         <shape android:shape="rectangle">
             <stroke android:width="2dp"
-                android:color="#505050"/>
-            <solid android:color="#505050"/>
+                android:color="#CC777575"/>
+            <solid android:color="#CC777575"/>
         </shape>
     </item>
 
