--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -12,7 +12,7 @@
         android:layout_height="43dp"
 
         android:layout_marginTop="24dp"
-        android:hint="Nicname"
+        android:hint="닉네임"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="비밀번호"
         app:layout_constraintEnd_toEndOf="@+id/sign_email"
         app:layout_constraintStart_toStartOf="@+id/sign_email"
         app:layout_constraintTop_toBottomOf="@+id/sign_email" />
@@ -38,7 +38,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="#3DB7CC"
+        android:background="@drawable/signup_round_button"
         android:text="회원가입"
         app:layout_constraintEnd_toEndOf="@+id/sign_pass"
         app:layout_constraintStart_toStartOf="@+id/sign_pass"
@@ -67,7 +67,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="E-mail"
+        android:hint="이메일"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
