--- a/app/src/main/res/layout/activity_my_post.xml
+++ b/app/src/main/res/layout/activity_my_post.xml
@@ -7,16 +7,15 @@
     android:orientation="vertical"
     tools:context=".activity.MyPostActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal" >
 
         <EditText
             android:id="@+id/my_post_title_edit"
             android:layout_width="305dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:hint="제목"
             android:textColor="@android:color/black"
             android:textSize="30sp"
@@ -27,11 +26,19 @@
             android:id="@+id/my_post_save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#7C96C9"
-            android:text="저장" />
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@+id/my_post_title_edit"
+            android:background="@drawable/round_button"
+            android:text="저장"
+            android:textSize="15dp"
+            android:textStyle="bold" />
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <EditText
         android:id="@+id/my_post_date_edit"
