--- a/app/src/main/res/layout/activity_my_post2.xml
+++ b/app/src/main/res/layout/activity_my_post2.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="Date"
-        android:textColor="#007D00"
+        android:textColor="@android:color/black"
         android:textSize="20sp" />
 
     <TextView
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="Contents"
-        android:textColor="@android:color/holo_green_dark"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <TextView
