--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -7,33 +7,38 @@
     android:orientation="vertical"
     tools:context=".activity.PostActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-    <EditText
-        android:id="@+id/post_title_edit"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:hint="제목"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        tools:ignore="HardcodedText"
-        />
+        <EditText
+            android:id="@+id/post_title_edit"
+            android:layout_width="305dp"
+            android:layout_height="wrap_content"
+            android:hint="제목"
+            android:textColor="@android:color/black"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/post_save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#7C96C9"
-            android:paddingTop="10dp"
-            android:text="저장" />
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@+id/post_title_edit"
+            android:background="@drawable/round_button"
+            android:text="저장"
+            android:textSize="15dp"
+            android:textStyle="bold" />
 
 
-    </LinearLayout>
+    </RelativeLayout>
     <EditText
         android:id="@+id/post_date_edit"
         android:layout_width="match_parent"
