--- a/app/src/main/res/layout/fragment_select.xml
+++ b/app/src/main/res/layout/fragment_select.xml
@@ -22,14 +22,15 @@
         <EditText
             android:id="@+id/searchWord"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:hint="검색어를 입력해주세요."/>
+            android:hint="검색어를 입력하세요."/>
 
         <Button
             android:id="@+id/searchBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/round_button"
             android:text="검색" />
 
     </LinearLayout>
