--- a/app/src/main/res/layout/item_commentview.xml
+++ b/app/src/main/res/layout/item_commentview.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/textlines">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,9 +19,12 @@
 
             <TextView
                 android:id="@+id/commentviewitem_userid"
-                android:layout_width="218dp"
+                android:layout_width="241dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="7.5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="4dp"
                 android:textStyle="bold"
                 tools:text="유저 아이디" />
 
@@ -30,9 +33,12 @@
                 android:layout_width="124dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="6dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="4dp"
                 android:textColor="#FF434343"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 tools:text="작성일" />
 
 
@@ -50,7 +56,11 @@
                 android:id="@+id/commentviewitem_comment"
                 android:layout_width="376dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="7.5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginBottom="6dp"
+                android:textSize="14sp"
                 tools:text="메세지 입니다" />
         </LinearLayout>
     </LinearLayout>
